syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

message DepositSisuTokenMsg {
  string signer = 1;
  DepositSisuData data = 2;
}

message DepositSisuData {
  int64 amount = 1;
  string consensusKey = 2;
  int32 index = 3;
}
