syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

import "sisu/node.proto";

message GenesisState {
  repeated Node nodes = 1;
}
